done with swagger documentation for countries api
